fix(src): finalizacion de detalles y version mobiles totamente terminada

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -34,7 +34,7 @@
     &_back {
         position: absolute;
         height: 100%;
-        width: auto;
+        width: 200px;
         left: 50%;
         padding: 0 1.5rem;
         border-radius: 10px;
